manifests/minecraft/ns-minecraft.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft
  labels:
    app.kubernetes.io/name: minecraft
