manifests/minecraft/sts-minecraft.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minecraft
  namespace: minecraft
  labels:
    app.kubernetes.io/name: minecraft
spec:
  serviceName: minecraft-sts
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: minecraft
  volumeClaimTemplates:
    - metadata:
        name: persistent
      spec:
        storageClassName: longhorn
        accessModes: [ReadWriteOnce]
        resources:
          requests:
            storage: 20Gi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minecraft
    spec:
      imagePullSecrets:
        - name: ghcr-nausicaea-minecraft
      volumes:
        - name: emptydir-config
          emptyDir: {}
        - name: emptydir-cache
          emptyDir: {}
        - name: emptydir-log
          emptyDir: {}
        - name: config
          projected:
            sources:
              - configMap:
                  name: server-config
                  items:
                    - key: server.properties
                      path: server/server.properties
                    - key: eula.txt
                      path: server/eula.txt
                    - key: opentelemetry.properties
                      path: server/opentelemetry.properties
                    - key: log4j2.xml
                      path: server/log4j2.xml
              - configMap:
                  name: player-config
                  items:
                    - key: banned-ips.json
                      path: player/banned-ips.json
                    - key: banned-players.json
                      path: player/banned-players.json
                    - key: ops.json
                      path: player/ops.json
                    - key: whitelist.json
                      path: player/whitelist.json
              - configMap:
                  name: mod-config
                  items:
                    - key: indigo-renderer.properties
                      path: mods/fabric/indigo-renderer.properties
                    - key: luckperms.conf
                      path: mods/luckperms/luckperms.conf
                    - key: auto-host.json
                      path: mods/polymer/auto-host.json
                    - key: client.json
                      path: mods/polymer/client.json
                    - key: common.json
                      path: mods/polymer/common.json
                    - key: resource-pack.json
                      path: mods/polymer/resource-pack.json
                    - key: server.json
                      path: mods/polymer/server.json
                    - key: AdvancedBackups-client.properties
                      path: mods/AdvancedBackups-client.properties
                    - key: AdvancedBackups.properties
                      path: mods/AdvancedBackups.properties
                    - key: ArcanaNovum.properties
                      path: mods/ArcanaNovum.properties
                    - key: c2me.toml
                      path: mods/c2me.toml
                    - key: cardinal-components-api.properties
                      path: mods/cardinal-components-api.properties
                    - key: dynamiclights.json
                      path: mods/dynamiclights.json
                    - key: ferritecore.mixin.properties
                      path: mods/ferritecore.mixin.properties
                    - key: forgeconfigapiport.toml
                      path: mods/forgeconfigapiport.toml
                    - key: getoffmylawn.json
                      path: mods/getoffmylawn.json
                    - key: leavesbegone-server.toml
                      path: mods/leavesbegone-server.toml
                    - key: letmedespawn.json
                      path: mods/letmedespawn.json
                    - key: lithostitched.json
                      path: mods/lithostitched.json
                    - key: midnightlib.json
                      path: mods/midnightlib.json
                    - key: pal.properties
                      path: mods/pal.properties
                    - key: polydex.json
                      path: mods/polydex.json
                    - key: polyfactory.json
                      path: mods/polyfactory.json
                    - key: sessility.properties
                      path: mods/sessility.properties
                    - key: stackdeobf.json
                      path: mods/stackdeobf.json
                    - key: tectonic.json
                      path: mods/tectonic.json
      containers:
        - name: main
          image: *minecraft_img
          resources:
            requests:
              cpu: "6"
              memory: 4Gi
            limits:
              cpu: "6"
              memory: 4Gi
          stdin: true
          tty: true
          volumeMounts:
            - name: persistent
              mountPath: /var/lib/minecraft/persistent
            - name: emptydir-config
              mountPath: /etc/minecraft
            - name: emptydir-cache
              mountPath: /var/cache/minecraft
            - name: emptydir-log
              mountPath: /var/log/minecraft
          ports:
            - name: minecraft
              containerPort: 25565
              protocol: TCP
            - name: query
              containerPort: 25566
              protocol: UDP
          livenessProbe:
            exec:
              command:
                - /usr/local/bin/healthcheck
            periodSeconds: 30
            failureThreshold: 3
          startupProbe:
            exec:
              command:
                - /usr/local/bin/healthcheck
            periodSeconds: 5
            failureThreshold: 70
