manifests/minecraft/svc-minecraft-sts.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft-sts
  namespace: minecraft
  labels:
    app.kubernetes.io/name: minecraft
spec:
  selector:
    app.kubernetes.io/name: minecraft
  clusterIP: None
