manifests/minecraft/svc-minecraft.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft
  namespace: minecraft
  labels:
    app.kubernetes.io/name: minecraft
spec:
  selector:
    app.kubernetes.io/name: minecraft
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - name: minecraft
      port: 30000
      protocol: TCP
      targetPort: minecraft
    - name: discovery
      port: 30000
      protocol: UDP
      targetPort: discovery
